<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="282dp"
        android:layout_height="103dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/si"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amazon" />

    <TextView
        android:id="@+id/si"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/si"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/si" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="10dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/sib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:textColor="@color/white"
        android:background="@drawable/bo1"
        android:id="@+id/sib"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sib"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:textColor="@color/white"
        android:background="@drawable/bo2"
        android:id="@+id/newAcc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/newAcc"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="9dp"
        android:text="@string/label"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/newAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/newAcc"
        app:layout_constraintTop_toBottomOf="@+id/sib" />

    <TextView
        android:textColor="#3D38E4"
        android:id="@+id/forgot"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"

        android:text="@string/forgot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />
</androidx.constraintlayout.widget.ConstraintLayout>